[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
rayon = "1.8"
indicatif = {version="0.17.7", features = ["rayon"]}
itertools = "0.12.0"
num = "0.4.1"
clap = {version="4.0.10", features = ["derive"]}
petgraph = "0.6.4"
transpose = "0.2.2"
grid = "0.13.0"

[dev-dependencies]
divan = "0.1.8"

[[bench]]
name = "day12"
path = "src/bench12.rs"
harness = false
